<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="1000dp"
    android:layout_gravity="center|top"
    android:background="#2E2E2E"
    android:paddingRight="10dp"
    android:paddingLeft="15dp"
    tools:context=".fragmentos.ajustesFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="668dp"

        android:layout_gravity="top|right">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"

            android:layout_marginRight="10dp"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAjustes"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:text="@string/Ajustes"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlanco"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/ajustesCuenta"
                android:textColor="#3F51B5"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/AjustesFrase1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textViewprueba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/nuevoNombre"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textEditnuevoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorPrincipal"
                android:ems="10"
                android:hint=""
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#676868" />

            <Button
                android:id="@+id/button3"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="#3F51B5"
                android:text="@string/Aplicar"
                android:textColor="#F8F8F8" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/nuevaContraseña"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textEditnuevaContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/colorPrincipal"
                android:hint="contraseña"
                android:lineSpacingExtra="8sp"
                android:singleLine="false"
                android:textColor="#FFFFFF"
                android:textColorHint="#676868" />

            <Button
                android:id="@+id/button2"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="#3F51B5"
                android:text="@string/Aplicar"
                android:textColor="#F8F8F8" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="Ajustes de Sesion"
                android:textColor="#3F51B5"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewPrecioBaconChedar"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingBottom="10dp"
                android:text="@string/AjustesFraseCerrarSesion"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonCerrarSesion"
                android:layout_width="218dp"
                android:layout_height="50dp"
                android:background="#3F51B5"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/logOut"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>